# made_hpc

bash_scripts/: 1.even_numbers.sh  2.array.sh  3.numbers.sh  4.linux_check.sh
matrix_multiplication/: CMakeLists.txt  Dockerfile  main.cpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
mpi/: .gitignore  CMakeLists.txt  README.md  cell_automata.cpp  measure_time.sh  meeting.cpp  plot_results.py  plot_time.py
openmp/: CMakeLists.txt  omp_bugparfoc.c  omp_bugreduction.c  omp_bugreduction_2.c  omp_hello.c  omp_parsec.c  omp_pi.cpp
pagerank/: CMakeLists.txt  README.md  matrix.cpp  matrix.hpp  number_of_paths.cpp  pagerank.cpp  routes_data.tsv  stations_data.tsv  vector.cpp  vector.hpp
